<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@id/bottom_navigation_sales"
            android:icon="@drawable/ic_sales"
            android:title="@string/title_bottom_navigation_sales"/>

    <item
            android:id="@id/bottom_navigation_warehouse"
            android:icon="@drawable/ic_warehouse_black_50"
            android:title="@string/title_bottom_navigation_warehouse"/>

    <item
            android:id="@id/bottom_navigation_admin"
            android:icon="@drawable/ic_emoticon_black_24"
            android:title="@string/title_bottom_navigation_admin"/>

    <item
        android:id="@id/bottom_navigation_profil"
        android:icon="@drawable/ic_user_black_50"
        android:title="@string/profile"/>

</menu>
