<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.masuyadistra.masuya.SalesOrder.SalesOrderActivity">

    <item
        android:id="@id/action_filter"
        android:orderInCategory="100"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter_white"
        app:showAsAction="always" />

    <item
        android:id="@id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh_24"
        app:showAsAction="always" />

    <item
        android:id="@id/action_select_all"
        android:title="@string/select_all"
        app:showAsAction="always"/>

</menu>
