<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:id="@id/action_refresh"
        android:icon="@drawable/ic_refresh_24"
        android:title="@string/refresh"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@id/action_add"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/add_item"
        app:showAsAction="ifRoom|collapseActionView"/>
</menu>