<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.masuyadistra.masuya.SalesOrder.SalesOrderActivity">
    <item
        android:id="@id/action_add_item"
        android:orderInCategory="100"
        android:title="@string/add_item"
        android:icon="@drawable/fab_add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_pdf"
        android:orderInCategory="100"
        android:title="@string/open_pdf"
        android:icon="@drawable/ic_pdf_black_64"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@id/action_cancel"
        android:orderInCategory="100"
        android:title="@string/cancel_so"
        android:icon="@android:drawable/ic_input_delete"
        app:iconTint="@android:color/black"
        app:showAsAction="collapseActionView" />
</menu>
