<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:background="@drawable/bottom_dialog_round"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@id/title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/primary_text_light"
            android:layout_marginTop="48dp"
            android:text="@string/cancel_sales_order_ini"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="14sp"
            android:id="@id/edt_ket"
            android:gravity="center"
            android:hint="@string/keterangan"
            tools:ignore="Autofill,TextFields" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tidak"
                android:id="@id/btn_tidak"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                android:layout_toStartOf="@+id/btn_ya"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ya"
                android:id="@id/btn_ya"
                android:textColor="@android:color/white"
                android:background="@color/flatui_alizarin"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:padding="2dp"
        android:src="@drawable/ic_delete_48"
        android:background="@drawable/circular_tick"
        android:layout_gravity="center_horizontal|top"
        tools:ignore="ContentDescription" />

</FrameLayout>